# integration_iregul

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  hacs.json  info.md  pyproject.toml  requirements_dev.txt  requirements_test.txt  setup.cfg
.devcontainer/: README.md  configuration.yaml  devcontainer.json
.github/workflows/: CI.yml  constraints.txt  pull.yml  push.yml  release-drafter.yml  tests.yml  validate.yml
config/: configuration.yaml
custom_components/integration_iregul/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/integration_iregul/translations/: en.json  fr.json
tests/: __init__.py  conftest.py  test_config_flow.py
