[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "integration-iregul"
version = "0.1.0"
description = "Home Assistant custom component for iRegul"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    {name = "PoppyPop", email = "skytep@gmail.com"}
]
keywords = ["iregul", "async", "api", "home-automation"]
dependencies = [
  "homeassistant",
  "aioiregul==0.1.4",
]

[project.urls]
Homepage = "https://github.com/PoppyPop/integration_iregul"
Repository = "https://github.com/PoppyPop/integration_iregul"
Issues = "https://github.com/PoppyPop/integration_iregul/issues"
"Bug Tracker" = "https://github.com/PoppyPop/integration_iregul/issues"

[tool.setuptools]
package-dir = {"" = "custom_components"}

[tool.setuptools.packages.find]
where = ["custom_components"]
include = ["integration_iregul"]
namespaces = false

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pyright>=1.1.389",
    "pre-commit>=3.5.0",
    "ruff>=0.1.0",
]
